--- a/.gitignore
+++ b/.gitignore
@@ -209,6 +209,5 @@ src/Tests/Nop.Tests/Connections.resx
 #Custom plugin repos
 
 
-src/Plugins/Nop.Plugin.Misc.Elko
-
-Nop.Plugin.Misc.Elko/
+#src/Plugins/Nop.Plugin.Misc.Elko
+#Nop.Plugin.Misc.Elko/
